--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -30,7 +30,7 @@
         <p>I am an aspiring web developer who is fascinated with how websites such as Google, work.
           As a graduate from UCSD, I have obtained a mixed set of skills in coding, music, visual arts, and science. Furthermore, I also have a diverse working history. Essentially, I love learning and gaining new skills, and this curiosity I have for how things work only fuels my motivation to learn.
         </p>
-        <p>I have worked as a Bartender and an Audio-Visual technician and enjoyed every second of it, but due to the Covid-19 epidemic, I unfortunately lost my job, including an employment offer. This new-found freedom has given me a chance to reflect; I realized that I sincerely miss computer science and that it was time move on into a new career. So far I have taken a couple of classes in web development and my excitement to learn more increasess.
+        <p>I have worked as a Bartender and an Audio-Visual technician and enjoyed every second of it, but due to the Covid-19 epidemic, I unfortunately lost my job, including an employment offer. This new-found freedom has given me a chance to reflect; I realized that I sincerely miss computer science and that it was time to move on into a new career. So far I have taken a couple of classes in web development and my excitement to learn more increasess.
 
         </p>
       </div> 
